--- a/demos/app/input/sample.component.html
+++ b/demos/app/input/sample.component.html
@@ -18,7 +18,7 @@
             <form class="input-sample" action="/" method="POST">
                 <h4 class="form-title">Personal Info</h4>
                 <div class="igx-form-group">
-                    <input igxInput name="firstName" type="text" [(ngModel)]="user.firstName" required/>
+                    <input igxInput name="firstName" type="text" [(ngModel)]="user.firstName" required disabled/>
                     <label igxLabel for="firstName">First Name*</label>
                 </div>
                 <div class="igx-form-group">
