--- a/src/themes/material/extends/_avatar.scss
+++ b/src/themes/material/extends/_avatar.scss
@@ -7,7 +7,7 @@
 }
 
 %igx-avatar--rounded {
-    border-radius: 50% 50%;
+    border-radius: 50%;
 }
 
 %igx-avatar--small {
@@ -26,7 +26,7 @@
 }
 
 %igx-avatar--icon {
-    background-color: #d1d1d1;
+    background-color: $igx-avatar-icon-bg;
 }
 
 %igx-avatar--image {
