--- a/src/themes/material/extends/_carousel.scss
+++ b/src/themes/material/extends/_carousel.scss
@@ -1,6 +1,6 @@
 %igx-carousel-display {
-    position: relative;
     display: flex;
+    position: relative;
     justify-content: center;
     align-items: center;
     flex-flow: column nowrap;
@@ -13,29 +13,29 @@
     width: 100%;
     height: inherit;
     overflow: hidden;
+
     .active {
         display: block;
     }
 }
 
 %igx-carousel-arrow {
-    position: absolute;
     display: flex;
+    margin: $carousel-arrow-margin;
+    position: absolute;
     justify-content: center;
     align-items: center;
     width: 46px;
     height: 46px;
     top: 50%;
     transform: translateY(-50%);
-    color: #fff;
+    color: $white;
     cursor: pointer;
-    background-color: rgba(255,255,255,.3);
-    margin: 0 16px;
+    background-color: $carousel-arrow-bg;
     border-radius: 50%;
-    box-shadow:  0px 1px 3px 0px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14),
-    0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+    box-shadow: $elevate-1;
     transition: opacity .25s ease-out;
+
     span {
         display: flex;
         align-items: center;
@@ -56,30 +56,30 @@
 
 %igx-carousel-indicators {
     display: flex;
+    margin: $carousel-indicators-margin;
     justify-content: center;
     align-items: center;
     position: fixed;
     list-style: none;
     z-index: 10;
     bottom: 0;
-    padding: 0;
-    margin: 16px 0;
+    padding: $carousel-indicators-padding;
     opacity: .85;
+
     li {
+        margin: $carousel-indicator-margin;
         position: relative;
         width: 12px;
         height: 12px;
-        margin: 0 5px;
         text-indent: -9999px;
         cursor: pointer;
-        border: 1px solid #fff;
+        border: 1px solid $white;
         border-radius: 50%;
-        background-color: rgba(255,255,255, .2);
-        transition: transform .15s ease-out;
-        box-shadow:  0px 1px 3px 0px rgba(0, 0, 0, 0.2),
-            0px 1px 1px 0px rgba(0, 0, 0, 0.14),
-            0px 2px 1px -1px rgba(0, 0, 0, 0.12);
-        &:after {
+        background-color: $carousel-indicator-bg;
+        transition: transform .25s $ease-in-quad;
+        box-shadow: $elevate-1;
+
+        &::after {
             content: '';
             position: absolute;
             top: -1px;
@@ -89,27 +89,28 @@
             width: inherit;
             height: inherit;
             border-radius: inherit;
-            background: #fff;
+            background: $white;
             transform: scale(0);
         }
+
         &:hover {
             transform: scale(1.2);
         }
     }
 
     .active {
-        &:after {
-            animation: scale-in .3s ease-out forwards;
+        &::after {
+            animation: scale-in .3s $ease-out-quad forwards;
         }
     }
 }
 
 
 %igx-carousel-slide {
+    display: none;
     width: 100%;
     height: 100%;
     position: relative;
-    display: none;
     transition: .5s ease-in-out left;
     backface-visibility: hidden;
     perspective: 1000px;
