--- a/src/themes/material/extends/_grid.scss
+++ b/src/themes/material/extends/_grid.scss
@@ -1,81 +1,79 @@
 %grid-display {
-	display: flex;
-	flex-flow: column nowrap;
-	width: 100%;
-	background: $grid-bg;
-	border-radius: $grid-br;
-	box-shadow: $grid-shadow;
-	overflow: hidden;
+    display: flex;
+    flex-flow: column nowrap;
+    width: 100%;
+    background: $grid-bg;
+    border-radius: $grid-br;
+    box-shadow: $grid-shadow;
+    overflow: hidden;
 }
 
 %grid-caption {
-	display: flex;
-	align-items: center;
-	font-size: $grid-caption-fs;
-	line-height: $grid-caption-lh;
-	padding: $grid-caption-padding;
+    display: flex;
+    align-items: center;
+    font-size: $grid-caption-fs;
+    line-height: $grid-caption-lh;
+    padding: $grid-caption-padding;
 }
 
 %grid-thead,
 %grid-tfoot {
-	display: block;
-	flex: 0 0 auto;
+    display: block;
+    flex: 0 0 auto;
 }
 
 %grid-tbody {
-	display: block;
+    display: block;
     flex: 1 1 auto;
     position: relative;
     overflow-y: auto;
 }
 
 %grid-tbody--empty {
-	display: flex;
-	justify-content: center;
-	text-align: center;
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
 
 %grid-row {
-	display: flex;
-	flex: 1;
-	background: $grid-row-bg;
-	border-bottom: $grid-row-bb;
-	transition: $grid-row-transition;
+    display: flex;
+    flex: 1;
+    background: $grid-row-bg;
+    border-bottom: $grid-row-bb;
+    transition: $grid-row-transition;
 
-	&:last-of-type {
-		border-bottom: none;
-	}
-	
-	&:hover {
-		background: $grid-row-hover;
-	}
-	
-	@at-root thead & {
-		&:first-of-type:hover {
-			background: none;
-		}
-	}
+    &:last-of-type {
+        border-bottom: 0;
+    }
+
+    &:hover {
+        background: $grid-row-hover;
+    }
+    @at-root thead  {
+        &:first-of-type:hover {
+            background: none;
+        }
+    }
 }
 
 %grid-row--selected td {
-	color: #fff;
-	background-color: $off-black;
+    color: $white;
+    background-color: $off-black;
 }
 
 %grid-cell-display {
     display: flex;
     flex-flow: column wrap;
     flex: 1;
-	justify-content: center;
-	outline: none;
+    justify-content: center;
+    outline: none;
     padding: $grid-cell-padding;
-
     font-size: $grid-cell-fs;
     line-height: $grid-cell-lh;
     color: $grid-cell-color;
     text-align: left;
     word-wrap: break-word;
-	overflow: hidden;
+    overflow: hidden;
 }
 
 %grid-cell-number {
@@ -83,26 +81,27 @@
 }
 
 %grid-cell--selected {
-	color: #fff;
-	background-color: $secondary-color !important;
+    color: $white;
+    background-color: $secondary-color !important;
 }
 
 %grid-cell-header {
     font-size: $grid-head-fs;
     color: $grid-head-color;
-	position: relative;
-	overflow: visible;
+    position: relative;
+    overflow: visible;
 }
 
 %grid-cell-header-content {
     display: flex;
-	align-items: center;
-	overflow: hidden;
-	& .title {
-		display: flex;
-		align-items: center;
-		flex-grow: 1;
-	}
+    align-items: center;
+    overflow: hidden;
+
+    & .title {
+        display: flex;
+        align-items: center;
+        flex-grow: 1;
+    }
 }
 
 %grid-cell-header-cicon {
