--- a/src/themes/material/extends/_navbar.scss
+++ b/src/themes/material/extends/_navbar.scss
@@ -1,14 +1,14 @@
 %igx-navbar-display {
-    position: relative;   
     display: flex;
+    position: relative;
     flex-flow: row nowrap;
     align-items: center;
     justify-content: space-between;
     width: 100%;
     height: 56px;
-    padding: 0 16px;
+    padding: $navbar-padding;
     background: $primary-color;
-    color: set-color($primary-color);
+    color: $navbar-text-color;
     box-shadow: $elevate-4;
     z-index: 4;
 }
@@ -16,6 +16,7 @@
 %igx-navbar-bundle {
     display: flex;
     align-items: center;
+
     * + * {
         margin-left: 16px;
     }
@@ -26,6 +27,6 @@
 }
 
 %igx-navbar-title {
-    font-size: em(18px, 16px);
-    line-height: em(18px, 16px);
+    font-size: $navbar-title-fz;
+    line-height: $navbar-title-lh;
 }
