--- a/src/themes/material/extends/_progress.scss
+++ b/src/themes/material/extends/_progress.scss
@@ -1,14 +1,14 @@
 // Linear Progress
 %progress-linear-display {
-    position: relative;
     display: flex;
+    position: relative;
     align-items: center;
     justify-content: flex-start;
     flex-flow: column nowrap;
     width: 100%;
     height: 5px;
     margin-bottom: 32px;
-    background: rgba($primary-color, .1);
+    background: $progressbar-color;
 }
 
 %progressbar-display {
@@ -18,35 +18,18 @@
 }
 
 %progressbar--striped > div {
-    background-image:
-    -webkit-linear-gradient(45deg,rgba(255,255,255,.15) 25%,
-    transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,
-    rgba(255,255,255,.15) 75%,
-    transparent 75%,transparent);
-
-    background-image:
-    -o-linear-gradient(45deg,rgba(255,255,255,.15) 25%,
-    transparent 25%,transparent 50%,
-    rgba(255,255,255,.15) 50%,
-    rgba(255,255,255,.15) 75%,
-    transparent 75%,transparent);
-
-    background-image:
-    linear-gradient(45deg,rgba(255,255,255,.15) 25%,
-    transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,
-    rgba(255,255,255,.15) 75%,
-    transparent 75%,transparent);
+    background-image: linear-gradient(45deg, $progressbar-stripe-color 25%, transparent 25%, transparent 50%, $progressbar-stripe-color 50%, $progressbar-stripe-color 75%, transparent 75%, transparent);
     -webkit-background-size: 40px 40px;
     background-size: 40px 40px;
 }
 
 %progress-linear-value {
+    margin: $progressbar-value-margin;
     position: absolute;
     color: $off-black;
-    font-size: em(14);
+    font-size: $progressbar-value-fz;
     align-self: flex-start;
-    font-weight: 600;
-    margin: 10px 5px;
+    font-weight: $progressbar-value-fw;
 }
 
 %progressbar--default {
@@ -69,7 +52,6 @@
     background-color: $success-color;
 }
 
-
 // Circular Progress
 %progress-circular-display {
     width: 100%;
@@ -85,7 +67,7 @@
 
 %progress-circular-circle {
     fill: transparent;
-    stroke: url(#linear);
+    stroke: url('#linear');
     stroke-width: 6;
     stroke-linecap: round;
     stroke-dashoffset: 289;
@@ -96,6 +78,6 @@
 
 %progress-circular-text {
     font-family: 'Titillium Web', sans-serif;
-    font-size: em(32);
+    font-size: $progress-circular-value-fz;
     fill: $off-black;
 }
