--- a/src/themes/material/extends/_range.scss
+++ b/src/themes/material/extends/_range.scss
@@ -1,8 +1,8 @@
 %igx-range-display {
-	display: flex;
-	position: relative;
-	height: $range-height;
-	align-items: center;
+    display: flex;
+    position: relative;
+    height: $range-height;
+    align-items: center;
 }
 
 %igx-range-thumbs-container {
@@ -41,29 +41,29 @@
 }
 
 %igx-thumb-display {
-    position: absolute;
     display: flex;
+    position: absolute;
     justify-content: center;
     flex-flow: row nowrap;
     width: $range-thumb-width;
     height: $range-thumb-height;
-    margin-left: -$range-thumb-width/2;
-    top: -$range-thumb-height/2;
+    margin-left: -$range-thumb-width / 2;
+    top: -$range-thumb-height / 2;
 }
 
 %igx-thumb-label {
-    position: relative;
     display: flex;
+    position: relative;
     align-items: center;
     justify-content: center;
     flex: 0 0 auto;
     min-width: $range-label-width;
     height: $range-label-height;
-    padding: 0 2px;
+    padding: $range-label-padding;
     border-radius: $range-label-radius;
     top: -36px;
     font-size: $range-label-font-size;
-    font-weight: 600;
+    font-weight: $range-label-font-weight;
     line-height: $range-label-font-size;
     color: $range-label-font-color;
     background: $range-label-background;
@@ -71,9 +71,10 @@
     transform: scale(0);
     border-color: $range-label-background transparent transparent;
     transform-origin: 50% 150% 0;
-    transition: all .2s ease-out;
+    transition: transform .2s ease-out;
     z-index: -1;
-    &:after {
+
+    &::after {
         content: '';
         position: absolute;
         left: 50%;
@@ -99,7 +100,7 @@
     transform: scale(1);
     transform-origin: 50% 50% 0;
     opacity: 1;
-    transition: all .2s ease-out;
+    transition: transform .2s ease-out;
 }
 
 %igx-thumb-dot--active {
@@ -109,7 +110,7 @@
 
 %igx-thumb-label--active {
     opacity: .85;
-    transform: scale(1.2); 
+    transform: scale(1.2);
 }
 
 %igx-thumb-dot--start,
