--- a/src/themes/material/extends/_ripple.scss
+++ b/src/themes/material/extends/_ripple.scss
@@ -1,14 +1,14 @@
 %igx-ripple-display {
-    position: absolute;
     display: inline-block;
+    position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    border-radius: 50% 50%;
-    background: rgba(72, 72, 72, 0.5);
+    border-radius: 50%;
+    background: transparentize($off-black, .5);
     pointer-events: none;
-    transform: translate3d(0,0,0), scale(0);
+    transform: translate3d(0, 0, 0), scale(0);
     will-change: opacity, transform;
 }
 
