--- a/src/themes/material/modules/_inputs.scss
+++ b/src/themes/material/modules/_inputs.scss
@@ -1,100 +1,93 @@
-
 // Global for all inputs
 input:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0 1000px white inset;
-	box-shadow: 0 0 0 1000px white inset;
+    -webkit-box-shadow: 0 0 0 1000px $white inset;
+    box-shadow: 0 0 0 1000px $white inset;
 }
 
 @include b(igx-form-group) {
-	$block: bem--selector-to-string(&);
+    @extend %igx-input-display;
+    $block: bem--selector-to-string(&);
 
-	@extend %igx-input-display;
+    label {
+        @extend %igx-form-label;
+    }
+    @include e(clear) {
+        @extend %igx-input-clear;
+    }
+    @include e(clear, $m: hidden) {
+        @extend %igx-input-clear;
+        @extend %igx-input-clear--hidden;
+    }
+    @include e(input) {
+        @extend %igx-form-input;
 
-	label {
-		@extend %igx-form-label;
-	}
+        &:focus {
+            @extend %igx-form-input--focused;
+        }
 
-	@include e(clear) {
-		@extend %igx-input-clear;
+        &:disabled {
+            @extend %igx-form-input--disabled;
+        }
 
-	}
+        &.ng-valid[required].ng-touched,
+        &.ng-valid.required {
+            @extend %igx-form-input--success;
 
-	@include e(clear, $m:hidden) {
-		@extend %igx-input-clear;
-		@extend %igx-input-clear--hidden;
-	}
+            ~label {
+                @extend %igx-form-label--success;
+            }
+        }
 
-	@include e(input) {
-		@extend %igx-form-input;
+        &.ng-invalid.ng-touched,
+        &.ng-invalid:not(form).ng-touched {
+            @extend %igx-form-input--error;
 
-		&:focus {
-			@extend %igx-form-input--focused;
-		}
-		
-		&:disabled {
-			@extend %igx-form-input--disabled;
-		}
-		
-		&.ng-valid[required].ng-touched,
-		&.ng-valid.required  {
-			@extend %igx-form-input--success;
-			~ label {
-				@extend %igx-form-label--success;
-			}
-		}
-		
-		&.ng-invalid.ng-touched,
-		&.ng-invalid:not(form).ng-touched {
-			@extend %igx-form-input--error;
-			~ label {
-				@extend %igx-form-label--error;
-			}
-		}
-		
-		&.ng-warning {
-			@extend %igx-form-input--warn;
-			~ label {
-				@extend %igx-form-label--warn;
-			}
-		}
-	}
+            ~label {
+                @extend %igx-form-label--error;
+            }
+        }
 
-	@include e(input, $m:filled) {
-		@extend %igx-form-input;
+        &.ng-warning {
+            @extend %igx-form-input--warn;
 
-		~ label {
-			@extend %igx-form-label--filled;
-			@extend %igx-form-label--float;
-		}
-	}
+            ~label {
+                @extend %igx-form-label--warn;
+            }
+        }
+    }
+    @include e(input, $m: filled) {
+        @extend %igx-form-input;
 
-	@include e(input, $m:focused) {
-		@extend %igx-form-input;
+        ~label {
+            @extend %igx-form-label--filled;
+            @extend %igx-form-label--float;
+        }
+    }
+    @include e(input, $m: focused) {
+        @extend %igx-form-input;
 
-		~ label {
-			@extend %igx-form-label--focused;
-		}
-	}
+        ~label {
+            @extend %igx-form-label--focused;
+        }
+    }
 
-	@include e(input, $m:placeholder) {
-		@extend %igx-form-input;
+    @include e(input, $m: placeholder) {
+        @extend %igx-form-input;
 
-		~ label {
-			@extend %igx-form-label--float;	
-		}
-	}
+        ~label {
+            @extend %igx-form-label--float;
+        }
+    }
+    @include e(input, $m: search) {
+        @extend %igx-form-input;
+        @extend %igx-search-input;
 
-	@include e(input, $m:search) {
-		@extend %igx-form-input;
-		@extend %igx-search-input;
-
-		~ label {
-			@extend %igx-search-label;
-		}
-	}
-
-	@include e(textarea) {
-		@extend #{$block}__input;
-		@extend %igx-textarea;
-	}
+        ~label {
+            @extend %igx-search-label;
+        }
+    }
+    @include e(textarea) {
+        // @extend #{$block}__input;
+        @extend %igx-textarea;
+    }
 }
