--- a/src/themes/material/modules/_nav-drawer.scss
+++ b/src/themes/material/modules/_nav-drawer.scss
@@ -1,4 +1,4 @@
-/* Main Navigation Drawer state styles */
+// Main Navigation Drawer state styles
 @include b(ig-nav-drawer) {
     position: fixed;
     width: em(242px);
@@ -6,65 +6,55 @@
     max-width: 90%;
     min-height: 100%;
     overflow-x: hidden;
-    background-color: #fff;
+    background-color: $white;
     top: 0;
     bottom: 0;
     left: 0;
-    z-index: 999;
-    /* use full syntax, iOS Safari won't work with transition: width .3s ease-out, transform .3s ease-out; shorthand */
+    z-index: 999; // use full syntax, iOS Safari won't work with transition: width .3s ease-out, transform .3s ease-out; shorthand
     transition-property: width, transform;
-    transition-duration: 0.3s, 0.3s;
+    transition-duration: .3s, .3s;
     transition-timing-function: $ease-out-quad, $ease-out-quad;
     transition-delay: 0s, 0s;
-    box-shadow: $elevate-16;
-    
-    /* states */
+    box-shadow: $elevate-16; //states
+
     &.collapsed {
-        transform: translate3d(-300px,0,0);
+        transform: translate3d(-300px, 0, 0);
         box-shadow: none;
+
+        &.right {
+            transform: translate3d(300px, 0, 0);
+            box-shadow: none;
+        }
     }
-    
+
     &.right {
         left: auto;
         right: 0;
     }
-    
-    &.collapsed.right {
-        transform: translate3d(300px,0px,0px);
-        box-shadow: none;
-    }
-    
+
     &.mini {
         width: 60px;
-        transition-duration: 0.2s, 0.2s;
+        transition-duration: .2s, .2s;
     }
-    
+
     &.pinned {
         position: relative;
         max-width: 100%;
         box-shadow: none;
     }
-    
-    &.pinned.collapsed {
-        transform: none;
-        width: 0;      
-        padding: 0;
-        overflow: hidden;
-    }
-}
-    
-/* Utility classes for active pan */
-.ig-nav-drawer.panning {
-    overflow-x:hidden;
-    transition: none;      
-}
 
-.ig-nav-drawer-overlay.panning {
-    transform: translate3d(0,0,0); /* try layer creation manually in advance for opacity */
-    transition: none;
-    
-    &.hidden {
-        visibility: visible;    
+    &.pinned {
+        &.collapsed {
+            transform: none;
+            width: 0;
+            padding: $navdrawer-pin-collapsed-padding;
+            overflow: hidden;
+        }
+    } // Utility classes for active pan
+
+    &.panning {
+        overflow-x: hidden;
+        transition: none;
     }
 }
 
@@ -73,35 +63,41 @@
     background: none;
     box-shadow: none;
     transition: none;
-    visibility: hidden; /* potentially don't use this? */
+    visibility: hidden; // potentially don't use this?
 }
 
-/* Navigation Drawer overlay styles */
+// Navigation Drawer overlay styles
 .ig-nav-drawer-overlay {
     opacity: 1;
     background-color: $overlay-color;
-   
-    transition-property: opacity, visibility;
-    /* opacity must match drawer transition, step over visibility to reduce animation cost */
-    transition-duration: 0.25s, 0.25s;
+    transition-property: opacity, visibility; // opacity must match drawer transition, step over visibility to reduce animation cost
+    transition-duration: .25s, .25s;
     transition-timing-function: ease-in, step-start;
     transition-delay: 0s, 0s;
-    
-    position:absolute;
+    position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     visibility: visible;
     z-index: 999;
+
     &.hidden {
-        transition-timing-function: ease-in-out, step-end;
-        /* use visibility so opacity can be animated */
-        visibility: hidden; 
+        transition-timing-function: ease-in-out, step-end; // use visibility so opacity can be animated
+        visibility: hidden;
         opacity: 0;
     }
-    
+
     &.pinned {
-        display: none;            
+        display: none;
+    }
+
+    &.panning {
+        transform: translate3d(0, 0, 0); // try layer creation manually in advance for opacity
+        transition: none;
+
+        &.hidden {
+            visibility: visible;
+        }
     }
 }
