--- a/src/themes/material/modules/_titillium.scss
+++ b/src/themes/material/modules/_titillium.scss
@@ -1,24 +1,25 @@
+$font-weight-light: 300;
+$font-weight-normal: 400;
+$font-weight-semibold: 600;
+$font-weight-bold: 700;
+
 @font-face {
-    font-family: "Titillium Web";
-    src: local(Titillium Web Light), url('#{$titillium-font-path}TitilliumWeb-Light.ttf');
-    src: url("#{$titillium-font-path}TitilliumWeb-Light.ttf") format("truetype");
-    font-weight: 300;
+    font-family: 'Titillium Web';
+    src: url('#{$titillium-font-path}TitilliumWeb-Light.ttf') format('truetype');
+    font-weight: $font-weight-light;
 }
 @font-face {
-    font-family: "Titillium Web";
-    src: local(Titillium Web Regular), url('#{$titillium-font-path}TitilliumWeb-Regular.ttf');
-    src: url("#{$titillium-font-path}TitilliumWeb-Regular.ttf") format("truetype");
-    font-weight: 400;
+    font-family: 'Titillium Web';
+    src: url('#{$titillium-font-path}TitilliumWeb-Regular.ttf') format('truetype');
+    font-weight: $font-weight-normal;
 }
 @font-face {
-    font-family: "Titillium Web";
-    src: local(Titillium Web Semi-Bold), url('#{$titillium-font-path}TitilliumWeb-SemiBold.ttf');
-    src: url("#{$titillium-font-path}TitilliumWeb-SemiBold.ttf") format("truetype");
-    font-weight: 600;
+    font-family: 'Titillium Web';
+    src: url('#{$titillium-font-path}TitilliumWeb-SemiBold.ttf') format('truetype');
+    font-weight: $font-weight-semibold;
 }
 @font-face {
-    font-family: "Titillium Web";
-    src: local(Titillium Web Bold), url('#{$titillium-font-path}TitilliumWeb-Bold.ttf');
-    src: url("#{$titillium-font-path}TitilliumWeb-Bold.ttf") format("truetype");
-    font-weight: 700;
+    font-family: 'Titillium Web';
+    src: url('#{$titillium-font-path}TitilliumWeb-Bold.ttf') format('truetype');
+    font-weight: $font-weight-bold;
 }
