--- a/src/themes/utilities/_bem.scss
+++ b/src/themes/utilities/_bem.scss
@@ -1,20 +1,19 @@
 //------------------------------------------------------------------------------
 // User-Overridable Configuration
-$bem--sep-elem : if(variable-exists(bem--sep-elem), $bem--sep-elem, "__");
-$bem--sep-mod : if(variable-exists(bem--sep-mod), $bem--sep-mod, "--");
-$bem--sep-mod-val: if(variable-exists(bem--sep-mod-val), $bem--sep-mod-val, "-");
+$bem--sep-elem: if(variable-exists(bem--sep-elem), $bem--sep-elem, '__');
+$bem--sep-mod: if(variable-exists(bem--sep-mod), $bem--sep-mod, '--');
+$bem--sep-mod-val: if(variable-exists(bem--sep-mod-val), $bem--sep-mod-val, '-');
 //------------------------------------------------------------------------------
 // Private Helpers
 @function bem--selector-to-string($s) {
-    @if $s==null {
-        @return "";
+    @if $s == null {
+        @return '';
     }
     $s: inspect($s); //cast to string
-    @if str-index($s, "(") {
+    @if str-index($s, '(') {
         // ruby sass => "(selector,)"
         @return str-slice($s, 2, -3);
-    }
-    @else {
+    } @else {
         // libsass => "selector"
         @return str-slice($s, 1, -1);
     }
@@ -22,25 +21,24 @@ $bem--sep-mod-val: if(variable-exists(bem--sep-mod-val), $bem--sep-mod-val, "-")
 
 @function bem--with-dot($x) {
     $first: str-slice($x, 0, 1);
-    @return if($first==".", $x, "."+$x)
+    @return if($first=='.', $x, '.'+$x);
 }
 
 @function bem--mod-str($m) {
-    @if type-of($m)=="map" {
+    @if type-of($m) == 'map' {
         $mm: nth($m, 1);
-        @return nth($mm, 1)+$bem--sep-mod-val+nth($mm, 2);
-    }
-    @else {
+        @return nth($mm, 1) + $bem--sep-mod-val + nth($mm, 2);
+    } @else {
         @return $m;
     }
 }
 
 @function bem--elem-str($b, $e) {
-    @return $b+$bem--sep-elem+$e;
+    @return $b + $bem--sep-elem + $e;
 }
 
 @function bem--bem-str($block, $elem, $mod) {
-    $elem: if($elem, " "+$elem, "");
+    $elem: if($elem, ' ' + $elem, '');
     @return ($block + $bem--sep-mod + bem--mod-str($mod) + $elem);
 }
 
@@ -55,7 +53,7 @@ $bem--sep-mod-val: if(variable-exists(bem--sep-mod-val), $bem--sep-mod-val, "-")
 }
 
 @function bem--contains-pseudo($x) {
-    @return str-index($x, ":");
+    @return str-index($x, ':');
 }
 
 @function bem--extract-block($x) {
@@ -67,20 +65,20 @@ $bem--sep-mod-val: if(variable-exists(bem--sep-mod-val), $bem--sep-mod-val, "-")
         @return str-slice($x, 1, str-index($x, $bem--sep-elem)-1);
     }
     @else if bem--contains-pseudo($x) {
-        @return str-slice($x, 1, str-index($x, ":")-1);
+        @return str-slice($x, 1, str-index($x, ':')-1);
     }
     @return $x;
 }
 
 @function bem--extract-first-selector($x) {
     // Returns the first selector of a nested selector string.
-    $eow: str-index($x, " ") or -1;
+    $eow: str-index($x, ' ') or -1;
     @return str-slice($x, 1, $eow);
 }
 
 //------------------------------------------------------------------------------
 // Main Interface
-@function bem-selector($block, $e:null, $elem:null, $m:null, $mod:null, $mods:null) {
+@function bem-selector($block, $e: null, $elem: null, $m: null, $mod: null, $mods: null) {
     // Generates a full BEM selector.
     //  - $block: Required. A string block name.
     //  - $elem: Optional. A sub-element name. If $mod is not present, it is
@@ -114,26 +112,26 @@ $bem--sep-mod-val: if(variable-exists(bem--sep-mod-val), $bem--sep-mod-val, "-")
     }
     @if $elem {
         // User passed an element-specific modifier
-        @if (type-of($elem)==list) and nth($elem, 2) {
+        @if (type-of($elem) == list) and nth($elem, 2) {
             // For now we don't support multiple elem-mods at once
-            @if type-of(nth($elem, 2))==list {
-                @error "Only one element-modifier allowed."
+            @if type-of(nth($elem, 2)) == list {
+                @error 'Only one element-modifier allowed.';
             }
-            $elem: str-slice(bem-selector(nth($elem, 1), $m:nth($elem, 2)), 2);
+            $elem: str-slice(bem-selector(nth($elem, 1), $m: nth($elem, 2)), 2);
         }
         $elem: bem--elem-str($block, $elem);
     } // Return early if possible
     @if not $mods {
         @return bem--with-dot($elem);
     }
-    @if type-of($mods) !=list {
+    @if type-of($mods) != list {
         $mods: ($mods, );
     }
-    $bemcls: "";
+    $bemcls: '';
     @for $i from 1 to length($mods) {
-        $bemcls: $bemcls + bem--bem-str($block, $elem, nth($mods, $i)) + ", ";
+        $bemcls: $bemcls + bem--bem-str($block, $elem, nth($mods, $i)) + ', ';
     }
-    $bemcls: $bemcls+bem--bem-str($block, $elem, nth($mods, -1));
+    $bemcls: $bemcls + bem--bem-str($block, $elem, nth($mods, -1));
     @return $bemcls;
 }
 
@@ -147,18 +145,18 @@ $bem--sep-mod-val: if(variable-exists(bem--sep-mod-val), $bem--sep-mod-val, "-")
     }
 }
 
-@mixin bem-elem($elem, $m:null, $mod:null) {
+@mixin bem-elem($elem, $m: null, $mod: null) {
     // Unrolls into a proper BEM element selector, depending on the context:
     // Inside just a block, yields a root-level `.block__elem`
     // Inside a mod or pseudo-selector, yields a nested `.block--mod .block__elem`
     // If $mod is included, it is appended to the block selector. Multiple
     // $mods are not supported.
     $this: bem--selector-to-string(&);
-    @if $this=="" {
-        @error "Detected an Element that is not inside a Block: #{$elem}";
+    @if $this == '' {
+        @error 'Detected an Element that is not inside a Block: #{$elem}';
     }
     @if bem--contains-elem($this) {
-        @error "Detected a multi-level nested Element (#{$this} #{$elem})! Bemerald doesn't support nested "+"elements because they do not have BEM nature (http://getbem.com/faq/#css-nested-elements). "+"If you must do it, use a hardcoded selector like &__subsubelem ";
+        @error 'Detected a multi-level nested Element (#{$this} #{$elem})! Bemerald doesn\'t support nested ' + 'elements because they do not have BEM nature (http://getbem.com/faq/#css-nested-elements). ' + 'If you must do it, use a hardcoded selector like &__subsubelem ';
     }
     $mod: $m or $mod;
     $block: bem--extract-block($this);
@@ -167,17 +165,17 @@ $bem--sep-mod-val: if(variable-exists(bem--sep-mod-val), $bem--sep-mod-val, "-")
         // Normal case, no pseudo-selector present or mod, so no nesting.
         // .myblock__myelem { ... }
         @at-root {
-            #{bem-selector($block, $e:($elem, $mod))} {
+            #{bem-selector($block, $e: ($elem, $mod))} {
                 @content;
             }
         }
-    }
-    @else {
+    } @else {
         // pseudo-element or mod present, so we have nesting.
         // .myblock:active .myblock__myelem { ... }
         // .myblock--mymod .myblock__myelem { ... }
         @at-root {
-            $selector: bem--extract-first-selector($this) + " " + bem-selector($block, $e:($elem, $mod));
+            $selector: bem--extract-first-selector($this) + ' ' + bem-selector($block, $e: ($elem, $mod));
+
             #{$selector} {
                 @content;
             }
@@ -192,24 +190,24 @@ $bem--sep-mod-val: if(variable-exists(bem--sep-mod-val), $bem--sep-mod-val, "-")
     // that should mean isn't clear.
     $skip: false;
     $this: bem--selector-to-string(&);
-    @if $this=="" {
-        @error "Detected a Modifier that is not inside a Block: "+$mod;
+    @if $this == '' {
+        @error 'Detected a Modifier that is not inside a Block: ' + $mod;
     }
     @if (bem--contains-elem($this)) {
-        @error "Nesting a Modifier inside an Element (#{$this} #{$mod}) "+"is not supported. Instead, use bem-elem(myelem, elem-mod) syntax.";
+        @error 'Nesting a Modifier inside an Element (#{$this} #{$mod}) ' + 'is not supported. Instead, use bem-elem(myelem, elem-mod) syntax.';
     }
     @if (bem--contains-pseudo($this)) {
-        @error "Nesting a Modifier inside a pseudo-selector is not supported: #{$this} #{$mod}";
+        @error 'Nesting a Modifier inside a pseudo-selector is not supported: #{$this} #{$mod}';
     }
     @at-root {
-        #{bem-selector($this, $m:$mod)} {
+        #{bem-selector($this, $m: $mod)} {
             @content;
         }
     }
 }
 
-@mixin bem($block, $e:null, $elem:null, $m:null, $mod:null, $mods:null) {
-    #{bem-selector($block, $e:$e,$elem:$elem, $m:$m,$mod:$mod,$mods:$mods)} {
+@mixin bem($block, $e: null, $elem: null, $m: null, $mod: null, $mods: null) {
+    #{bem-selector($block, $e: $e, $elem: $elem, $m: $m, $mod: $mod, $mods: $mods)} {
         @content;
     }
 }
@@ -222,8 +220,8 @@ $bem--sep-mod-val: if(variable-exists(bem--sep-mod-val), $bem--sep-mod-val, "-")
     }
 }
 
-@mixin e($elem, $m:null, $mod:null) {
-    @include bem-elem($elem, $m: $m, $mod:$mod) {
+@mixin e($elem, $m: null, $mod: null) {
+    @include bem-elem($elem, $m: $m, $mod: $mod) {
         @content;
     }
 }
@@ -234,26 +232,26 @@ $bem--sep-mod-val: if(variable-exists(bem--sep-mod-val), $bem--sep-mod-val, "-")
     }
 }
 
-@mixin Block($block) {
+@mixin block($block) {
     @include bem-block($block) {
         @content;
     }
 }
 
-@mixin Elem($elem, $m:null, $mod:null) {
-    @include bem-elem($elem, $m: $m, $mod:$mod) {
+@mixin elem($elem, $m: null, $mod: null) {
+    @include bem-elem($elem, $m: $m, $mod: $mod) {
         @content;
     }
 }
 
-@mixin Mod($mod) {
+@mixin mod($mod) {
     @include bem-mod($mod) {
         @content;
     }
 }
 
-@mixin BEM($block, $e:null, $elem:null, $m:null, $mod:null, $mods:null) {
-    @include bem($block, $e: $e, $elem:$elem, $m:$m, $mod:$mod, $mods:$mods) {
+@mixin bem($block, $e: null, $elem: null, $m: null, $mod: null, $mods: null) {
+    @include bem($block, $e: $e, $elem: $elem, $m: $m, $mod: $mod, $mods: $mods) {
         @content;
     }
 }
