--- a/demos/app/grid/sample.component.html
+++ b/demos/app/grid/sample.component.html
@@ -62,7 +62,7 @@
                 </igx-card>
             </div>
 
-            <igx-grid #grid1 [data]="local_data" [autoGenerate]="true" (onColumnInit)="initColumns($event)" (onCellSelection)="selectCell($event)">
+            <igx-grid #grid1 [data]="localData" [autoGenerate]="true" (onColumnInit)="initColumns($event)" (onCellSelection)="selectCell($event)">
             </igx-grid>
 
         </article>
