Add descriptions to all demo pages

--- a/demos/app/navbar/sample.component.html
+++ b/demos/app/navbar/sample.component.html
@@ -2,13 +2,7 @@
     <div class="sample-header">
         <h1 class="title">Navbar</h1>
         <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium lorem id tristique sagittis. Proin in mauris ac
-            tortor placerat sollicitudin eu sit amet leo. Aliquam consectetur eu sem vitae egestas. Class aptent taciti sociosqu
-            ad litora torquent per conubia nostra, per inceptos himenaeos. Cras a erat sagittis, iaculis urna ac, mollis
-            elit. Vestibulum accumsan ex at mauris sagittis, sed tincidunt justo fringilla. Phasellus vel porttitor odio.
-            Aenean quis nisi non ex ultrices efficitur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec
-            nec felis cursus erat mattis venenatis. Curabitur congue ullamcorper nisi nec blandit. Fusce molestie consectetur
-            urna sed feugiat.
+            Informs the user of its current route in the application and provides quick actions.
         </p>
     </div>
     <section class="sample-content">
