--- a/demos/app/badge/sample.component.html
+++ b/demos/app/badge/sample.component.html
@@ -2,13 +2,8 @@
     <div class="sample-header">
         <h1 class="title">Badge</h1>
         <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium lorem id tristique sagittis. Proin in mauris ac
-            tortor placerat sollicitudin eu sit amet leo. Aliquam consectetur eu sem vitae egestas. Class aptent taciti sociosqu
-            ad litora torquent per conubia nostra, per inceptos himenaeos. Cras a erat sagittis, iaculis urna ac, mollis
-            elit. Vestibulum accumsan ex at mauris sagittis, sed tincidunt justo fringilla. Phasellus vel porttitor odio.
-            Aenean quis nisi non ex ultrices efficitur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec
-            nec felis cursus erat mattis venenatis. Curabitur congue ullamcorper nisi nec blandit. Fusce molestie consectetur
-            urna sed feugiat.
+            Displays active count or an icon. It can be is used in combination with a parent component such as an avatar, a navigation
+            bar, an icon, etc.
         </p>
     </div>
 
@@ -38,7 +33,7 @@
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar initials="AZ" bgColor="#D1D1D1"  color="#484848">
+                    <igx-avatar initials="AZ" bgColor="#D1D1D1" color="#484848">
                         <igx-badge type="warning" position="bottom-right" icon="info_outline"></igx-badge>
                     </igx-avatar>
                 </div>
