--- a/demos/app/grid/sample.component.html
+++ b/demos/app/grid/sample.component.html
@@ -3,13 +3,8 @@
     <div class="sample-header">
         <h1 class="title">Grid</h1>
         <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium lorem id tristique sagittis. Proin in mauris ac
-            tortor placerat sollicitudin eu sit amet leo. Aliquam consectetur eu sem vitae egestas. Class aptent taciti sociosqu
-            ad litora torquent per conubia nostra, per inceptos himenaeos. Cras a erat sagittis, iaculis urna ac, mollis
-            elit. Vestibulum accumsan ex at mauris sagittis, sed tincidunt justo fringilla. Phasellus vel porttitor odio.
-            Aenean quis nisi non ex ultrices efficitur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec
-            nec felis cursus erat mattis venenatis. Curabitur congue ullamcorper nisi nec blandit. Fusce molestie consectetur
-            urna sed feugiat.
+            Displays data formatted as a table and provides a line of advanced features such as sorting and filtering, editing, column
+            and row freezing, cell merging, paging, column moving and hiding.
         </p>
     </div>
 
