--- a/demos/app/input/sample.component.html
+++ b/demos/app/input/sample.component.html
@@ -1,15 +1,29 @@
 <div class="sample-wrapper">
     <div class="sample-header">
         <h1 class="title">Forms</h1>
-        <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium lorem id tristique sagittis. Proin in mauris ac
-            tortor placerat sollicitudin eu sit amet leo. Aliquam consectetur eu sem vitae egestas. Class aptent taciti sociosqu
-            ad litora torquent per conubia nostra, per inceptos himenaeos. Cras a erat sagittis, iaculis urna ac, mollis
-            elit. Vestibulum accumsan ex at mauris sagittis, sed tincidunt justo fringilla. Phasellus vel porttitor odio.
-            Aenean quis nisi non ex ultrices efficitur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec
-            nec felis cursus erat mattis venenatis. Curabitur congue ullamcorper nisi nec blandit. Fusce molestie consectetur
-            urna sed feugiat.
-        </p>
+
+        <h4>
+            Includes the following components and directives:
+        </h4>
+        <ul class="description">
+            <li>
+                <b>igx-radio</b> allows single selection from a set.
+            </li>
+            <li>
+                <b>igx-checkbox</b> allows multiple selection from a set.
+            </li>
+            <li>
+                <b>igx-switch</b> turns on and off an option.
+            </li>
+            <li>
+                <b>igx-input</b> allows the user to enter a value into a field.
+            </li>
+            <li>
+                <b>igxLabel</b> gives a single line of text information. It is usually used in combination with igxbutton,
+                igx-radio, igx-switch or igx-input.
+            </li>
+        </ul>
+
     </div>
 
     <section class="sample-content">
