--- a/demos/app/list/sample.component.html
+++ b/demos/app/list/sample.component.html
@@ -2,13 +2,7 @@
     <div class="sample-header">
         <h1 class="title">List</h1>
         <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium lorem id tristique sagittis. Proin in mauris ac
-            tortor placerat sollicitudin eu sit amet leo. Aliquam consectetur eu sem vitae egestas. Class aptent taciti sociosqu
-            ad litora torquent per conubia nostra, per inceptos himenaeos. Cras a erat sagittis, iaculis urna ac, mollis
-            elit. Vestibulum accumsan ex at mauris sagittis, sed tincidunt justo fringilla. Phasellus vel porttitor odio.
-            Aenean quis nisi non ex ultrices efficitur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec
-            nec felis cursus erat mattis venenatis. Curabitur congue ullamcorper nisi nec blandit. Fusce molestie consectetur
-            urna sed feugiat.
+            Displays rows of identical items. Each list can contain one or more header items.
         </p>
     </div>
     <section class="sample-content">
@@ -107,14 +101,8 @@
                 <div class="igx-list__empty--custom" [hidden]="fruitsFilteredItemsCount > 0 || searchFruits.value === ''">
                     No filtered items.
                 </div>
-                <button
-                    igxButton="fab" 
-                    igxButtonColor="white" 
-                    igxButtonBackground="#0375be" 
-                    igRipple="white"
-                    (click)="addFruitDialog.open()"
-                    [hidden]="fruits.length === 0"
-                    style="position: absolute; bottom: 24px; right: 24px">
+                <button igxButton="fab" igxButtonColor="white" igxButtonBackground="#0375be" igRipple="white" (click)="addFruitDialog.open()"
+                    [hidden]="fruits.length === 0" style="position: absolute; bottom: 24px; right: 24px">
                         <i class="material-icons">add</i>
                 </button>
             </div>
