--- a/demos/app/tabbar/sample.component.html
+++ b/demos/app/tabbar/sample.component.html
@@ -3,13 +3,8 @@
     <div class="sample-header">
         <h1 class="title">Tabbar</h1>
         <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium lorem id tristique sagittis. Proin in mauris ac
-            tortor placerat sollicitudin eu sit amet leo. Aliquam consectetur eu sem vitae egestas. Class aptent taciti sociosqu
-            ad litora torquent per conubia nostra, per inceptos himenaeos. Cras a erat sagittis, iaculis urna ac, mollis
-            elit. Vestibulum accumsan ex at mauris sagittis, sed tincidunt justo fringilla. Phasellus vel porttitor odio.
-            Aenean quis nisi non ex ultrices efficitur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec
-            nec felis cursus erat mattis venenatis. Curabitur congue ullamcorper nisi nec blandit. Fusce molestie consectetur
-            urna sed feugiat.
+            Allows the user to navigate between different content displayed in one view. Supports 3 to 5 panels identified with an icon
+            and/or text.
         </p>
     </div>
 
@@ -29,7 +24,7 @@
                                         <p class="name">{{contact.text}}</p>
                                         <span class="phone">{{contact.phone}}</span>
                                     </div>
-                                    <igx-icon name="phone" ></igx-icon>
+                                    <igx-icon name="phone"></igx-icon>
                                 </div>
                             </igx-list-item>
                         </igx-list>
